# kops

./: .gitignore  Cargo.toml  Justfile  README.md  deny.toml  dprint.json
.cargo/: config.toml
config/: kopsd.toml  kopsd.toml.sample
crates/kops_aws_eks/: Cargo.toml
crates/kops_aws_eks/src/: lib.rs  main.rs
crates/kops_aws_sso/: Cargo.toml
crates/kops_aws_sso/src/: lib.rs  main.rs
crates/kops_eks/: Cargo.toml
crates/kops_eks/src/: main.rs
crates/kops_log/: Cargo.toml
crates/kops_log/src/: lib.rs
crates/kops_message/: Cargo.toml
crates/kops_protocol/: Cargo.toml
crates/kops_protocol/src/: lib.rs  types.rs  wire.rs
data/: error_image_pull_back_off.yaml  ok_nginx.yaml
kopsctl/: Cargo.toml
kopsctl/src/: helper.rs  main.rs
kopsctl/src/cmd/: env.rs  login.rs  mod.rs  ping.rs  pods.rs  version.rs
kopsd/: Cargo.toml  build.rs
kopsd/src/: config.rs  handler.rs  kube_worker.rs  main.rs  server.rs  state.rs
scripts/: setup.sh
