[workspace]
resolver = "3"
members = ["crates/*", "kopsctl", "kopsd"]

[workspace.package]
authors = ["murilo ijanc <murilo@ijanc.org>"]
categories = ["command-line-utilities", "development-tools", "system", "network-programming"]
homepage = "https://paastel.io"
keywords = ["kubernetes", "k8s", "daemon", "monitoring", "cli", "logs", "events"]
license = "ISC"
readme = "README.md"
repository = "https://got.paastel.io/?action=summary&path=kops"
description = "A lightweight Kubernetes cluster monitoring daemon in real-time."

edition = "2024"
rust-version = "1.89.0"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
tail_expr_drop_order = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
kops_log = { version = "=0.1.0", path = "crates/kops_log" }
kops_protocol = { version = "=0.1.0", path = "crates/kops_protocol" }

anyhow = "=1.0.100"
aws-config = { version = "=1.8.11", features = ["behavior-version-latest"] }
aws-credential-types = "=1.2.10"
aws-sdk-sso = "=1.90.0"
aws-sdk-ssooidc = "=1.92.0"
bincode = "=2.0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "=4.5.53", features = ["derive", "env"] }
config = { version = "=0.15.19", features = ["toml"] }
daemonize = "=0.5.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
futures = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = { version = "2.0.1", features = ["runtime", "config"] }
kube-runtime = "2.0.1"
serde = { version = "=1.0.228", features = ["derive"] }
tokio = { version = "=1.48.0", features = ["full"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
webbrowser = "=1.0.6"

[profile.dev]
debug = false

[profile.test]
debug = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.coverage]
inherits = "release"
opt-level = 2
codegen-units = 256
lto = "thin"
debug-assertions = true
overflow-checks = true

[profile.dev-no-debug-assertions]
inherits = "dev"
debug-assertions = false
