[package]
name = "kopsd"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
aws-credential-types.workspace = true
aws-config.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
daemonize.workspace = true
futures.workspace = true
k8s-openapi.workspace = true
kops_log.workspace = true
kops_protocol.workspace = true
kops_aws_eks.workspace = true
kube.workspace = true
kube-runtime.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
