[package]
name = "kops_aws_eks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-eks = "1"
aws-sdk-sts = "1.94.0"
aws-sigv4 = "1"
aws-smithy-runtime-api = "1.9.2"
base64 = "0.22"
http = "1"
k8s-openapi = { version = "0.22", features = ["v1_30"] }
kube = { version = "0.91", features = ["client", "rustls-tls"] }
pem = "3.0.6"
percent-encoding = "2.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
urlencoding = "2.1"
