[package]
name = "kops_aws_sso"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-sso.workspace = true
aws-sdk-ssooidc.workspace = true
chrono.workspace = true
tokio.workspace = true

[lints]
workspace = true
