[package]
name = "kops_protocol"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
bincode.workspace = true
k8s-openapi.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[lints]
workspace = true
